Picture fragments support done

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
         </plugins>
     </build>
 
-    <!--test for branch-->
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+    </dependencies>
 </project>
